# dinov2

./: pyproject.toml
dinov2/configs/train/: vitb16_3d.yaml  vitl16_3d.yaml  vitm16_3d.yaml  vitm16_3d_openneuro.yaml  vitm16_3d_orig.yaml  vits16_3d.yaml
dinov2/data/: __init__.py  augmentations.py  collate.py  dataset.py  loaders.py  masking.py  transforms.py
dinov2/fsdp/: __init__.py
dinov2/hub/: backbones.py
dinov2/layers/: __init__.py  attention.py  block.py  mlp.py  patch_embed.py  swiglu_ffn.py
dinov2/logging/: helpers.py
dinov2/models/: __init__.py  vision_transformer.py
dinov2/train/: ssl_meta_arch.py  train.py
